ajustes seguridad y estilo en registro

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,11 @@
                     <li class="nav-item active">
                         <a class="nav-link" href={{ path('app_home') }}>Inicio</a>
                     </li>
+                    {% if  app.user %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('mis_pedidos') }}">Mis Pedidos</a>
                     </li>
+                    
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{path('app_producto_index')}}">Gestionar productos</a>
@@ -39,6 +41,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('logout') }}">Salir</a>
                     </li>
+                    {% endif %}
                 </ul>
 
 
