--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container mt-4 d-flex justify-content-center">
+
     <h1>Register</h1>
+</div>
+<div class="container mt-4 d-flex justify-content-center">
+    
     {{ form_start(registrationForm) }}
-        {{ form_widget(registrationForm) }}
-        <button type="submit" class="btn btn-primary">Register</button>
+        {# {{ form_widget(registrationForm) }} #}
+        <div class="form-group">
+        {{ form_label(registrationForm.email, null, {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(registrationForm.email) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(registrationForm.plainPassword.first, "Contraseña", {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(registrationForm.plainPassword.first) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(registrationForm.plainPassword.second, "Repita Contraseña", {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(registrationForm.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+        {{ form_errors(registrationForm.plainPassword.second) }}
+    </div>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary" style="margin-top:30px;">Register</button>
+    </div>
     {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
