--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,6 +22,11 @@
     <input type="hidden" name="_target_path" value="{{ path('app_home') }}">
     <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary mt-3">Login</button>
+    
+    </div>
+    <div class="d-flex justify-content-center">
+    <a href="{{ path('app_register') }}">Registrarse</a>
+    
     </div>
 </form>
 </div>
